--- a/main.ipynb
+++ b/main.ipynb
@@ -24,7 +24,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class solving_LQR:\n",
+    "    def __init__(self, H, M, C, D, R, T):\n",
+    "        self.H = torch.tensor(H, dtype=torch.float64)\n",
+    "        self.M = torch.tensor(M, dtype=torch.float64)\n",
+    "        self.C = torch.tensor(C, dtype=torch.float64)\n",
+    "        self.D = torch.tensor(D, dtype=torch.float64)\n",
+    "        self.R = torch.tensor(R, dtype=torch.float64)\n",
+    "        self.T = T\n",
+    "        self.sigma = None "
+   ]
   }
  ],
  "metadata": {
