--- a/main.ipynb
+++ b/main.ipynb
@@ -16,18 +16,23 @@
     "import numpy as np\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch"
+    "import torch\n",
+    "from scipy.integrate import solve_ivp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise1.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "from scipy.integrate import solve_ivp\n",
     "\n",
     "class LQR:\n",
     "    def __init__(self, H, M, C, D, R, T):\n",
@@ -47,19 +52,26 @@
     "            S = S_flat.reshape(2, 2)\n",
     "            dSdt = -2 * H.T @ S + S @ M @ np.linalg.inv(D) @ M.T @ S - C\n",
     "            return dSdt.flatten()\n",
-    "\n",
-    "        sol = solve_ivp(ricatti_ode, [T, time_grid[0]], R.flatten(), t_eval=time_grid[::-1], vectorized=True)\n",
+    "        \n",
+    "        sol = solve_ivp(ricatti_ode, [T, time_grid[0]], R.flatten(), t_eval=torch.flip(time_grid, dims=[0]), vectorized=True)\n",
     "        S_values = sol.y.T.reshape(-1, 2, 2)\n",
-    "        return torch.tensor(S_values[::-1], dtype=torch.float32)  # Reverse the order to match the input time grid\n",
-    "\n",
+    "        S_values_tensor = torch.tensor(S_values, dtype=torch.float32)\n",
+    "        # 使用 torch.flip() 函数反转张量的顺序\n",
+    "        S_values_reversed = torch.flip(S_values_tensor, [0])\n",
+    "        return S_values_reversed\n",
+    "    \n",
     "    def control_problem_value(self, t, x):\n",
     "        S_values = self.solve_ricatti_ode(t)\n",
-    "        v_values = torch.stack([x_.T @ S_values[i] @ x_ for i, x_ in enumerate(x)])\n",
-    "        if self.sigma is not None:\n",
-    "            tr_values = torch.tensor([np.trace(self.sigma @ self.sigma.T @ S_values[i].numpy()) for i in range(len(t))], dtype=torch.float32)\n",
-    "            integral_tr = torch.cumsum(tr_values * (t[1:] - t[:-1]), dim=0)\n",
-    "            v_values += integral_tr\n",
-    "        return v_values\n",
+    "        v_values = []\n",
+    "        for i in range(x.size(0)):  # Loop over samples in the batch\n",
+    "            x_ = x[i].unsqueeze(0)   # Get the i-th sample and unsqueeze to add a batch dimension\n",
+    "            v = torch.matmul(torch.matmul(x_.transpose(1, 2), S_values[i]), x_)  # Perform matrix multiplication\n",
+    "            if self.sigma is not None:\n",
+    "                tr_value = np.trace(self.sigma @ self.sigma.T @ S_values[i].numpy())\n",
+    "                v += tr_value * (t[i+1] - t[i]) if i < len(t) - 1 else 0  # Add integral term\n",
+    "            v_values.append(v.item())  # Convert to scalar and append to the list\n",
+    "        return torch.tensor(v_values, dtype=torch.float32)\n",
+    "\n",
     "\n",
     "    def markov_control_function(self, t, x):\n",
     "        S_values = self.solve_ricatti_ode(t)\n",
@@ -73,6 +85,482 @@
     "# x = torch.tensor([[[1.0, 2.0]]])  # Example state tensor\n",
     "# print(lqr.markov_control_function(time_grid, x))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 1.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some assumption for the model. We set the value for matrix H, M, C, D, R and sigma as follow. And time T is  1 years."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Markov Control Function:\n",
+      "tensor([[[ 1.0007],\n",
+      "         [-2.0001]]])\n",
+      "\n",
+      "S Values:\n",
+      "tensor([[[ 0.5999, -0.8003],\n",
+      "         [ 0.8003,  0.5999]],\n",
+      "\n",
+      "        [[ 0.6031, -0.7978],\n",
+      "         [ 0.7978,  0.6031]],\n",
+      "\n",
+      "        [[ 0.6064, -0.7954],\n",
+      "         [ 0.7954,  0.6064]],\n",
+      "\n",
+      "        [[ 0.6097, -0.7928],\n",
+      "         [ 0.7928,  0.6097]],\n",
+      "\n",
+      "        [[ 0.6131, -0.7903],\n",
+      "         [ 0.7903,  0.6131]],\n",
+      "\n",
+      "        [[ 0.6164, -0.7876],\n",
+      "         [ 0.7876,  0.6164]],\n",
+      "\n",
+      "        [[ 0.6198, -0.7850],\n",
+      "         [ 0.7850,  0.6198]],\n",
+      "\n",
+      "        [[ 0.6233, -0.7822],\n",
+      "         [ 0.7822,  0.6233]],\n",
+      "\n",
+      "        [[ 0.6267, -0.7795],\n",
+      "         [ 0.7795,  0.6267]],\n",
+      "\n",
+      "        [[ 0.6302, -0.7767],\n",
+      "         [ 0.7767,  0.6302]],\n",
+      "\n",
+      "        [[ 0.6337, -0.7738],\n",
+      "         [ 0.7738,  0.6337]],\n",
+      "\n",
+      "        [[ 0.6373, -0.7709],\n",
+      "         [ 0.7709,  0.6373]],\n",
+      "\n",
+      "        [[ 0.6409, -0.7679],\n",
+      "         [ 0.7679,  0.6409]],\n",
+      "\n",
+      "        [[ 0.6445, -0.7649],\n",
+      "         [ 0.7649,  0.6445]],\n",
+      "\n",
+      "        [[ 0.6482, -0.7618],\n",
+      "         [ 0.7618,  0.6482]],\n",
+      "\n",
+      "        [[ 0.6518, -0.7586],\n",
+      "         [ 0.7586,  0.6518]],\n",
+      "\n",
+      "        [[ 0.6556, -0.7554],\n",
+      "         [ 0.7554,  0.6556]],\n",
+      "\n",
+      "        [[ 0.6593, -0.7521],\n",
+      "         [ 0.7521,  0.6593]],\n",
+      "\n",
+      "        [[ 0.6631, -0.7488],\n",
+      "         [ 0.7488,  0.6631]],\n",
+      "\n",
+      "        [[ 0.6669, -0.7454],\n",
+      "         [ 0.7454,  0.6669]],\n",
+      "\n",
+      "        [[ 0.6708, -0.7420],\n",
+      "         [ 0.7420,  0.6708]],\n",
+      "\n",
+      "        [[ 0.6747, -0.7384],\n",
+      "         [ 0.7384,  0.6747]],\n",
+      "\n",
+      "        [[ 0.6786, -0.7348],\n",
+      "         [ 0.7348,  0.6786]],\n",
+      "\n",
+      "        [[ 0.6825, -0.7311],\n",
+      "         [ 0.7311,  0.6825]],\n",
+      "\n",
+      "        [[ 0.6865, -0.7274],\n",
+      "         [ 0.7274,  0.6865]],\n",
+      "\n",
+      "        [[ 0.6906, -0.7236],\n",
+      "         [ 0.7236,  0.6906]],\n",
+      "\n",
+      "        [[ 0.6946, -0.7197],\n",
+      "         [ 0.7197,  0.6946]],\n",
+      "\n",
+      "        [[ 0.6987, -0.7157],\n",
+      "         [ 0.7157,  0.6987]],\n",
+      "\n",
+      "        [[ 0.7029, -0.7117],\n",
+      "         [ 0.7117,  0.7029]],\n",
+      "\n",
+      "        [[ 0.7070, -0.7075],\n",
+      "         [ 0.7075,  0.7070]],\n",
+      "\n",
+      "        [[ 0.7112, -0.7033],\n",
+      "         [ 0.7033,  0.7112]],\n",
+      "\n",
+      "        [[ 0.7155, -0.6989],\n",
+      "         [ 0.6989,  0.7155]],\n",
+      "\n",
+      "        [[ 0.7198, -0.6945],\n",
+      "         [ 0.6945,  0.7198]],\n",
+      "\n",
+      "        [[ 0.7241, -0.6900],\n",
+      "         [ 0.6900,  0.7241]],\n",
+      "\n",
+      "        [[ 0.7284, -0.6854],\n",
+      "         [ 0.6854,  0.7284]],\n",
+      "\n",
+      "        [[ 0.7328, -0.6807],\n",
+      "         [ 0.6807,  0.7328]],\n",
+      "\n",
+      "        [[ 0.7372, -0.6759],\n",
+      "         [ 0.6759,  0.7372]],\n",
+      "\n",
+      "        [[ 0.7417, -0.6710],\n",
+      "         [ 0.6710,  0.7417]],\n",
+      "\n",
+      "        [[ 0.7462, -0.6660],\n",
+      "         [ 0.6660,  0.7462]],\n",
+      "\n",
+      "        [[ 0.7507, -0.6608],\n",
+      "         [ 0.6608,  0.7507]],\n",
+      "\n",
+      "        [[ 0.7553, -0.6556],\n",
+      "         [ 0.6556,  0.7553]],\n",
+      "\n",
+      "        [[ 0.7599, -0.6503],\n",
+      "         [ 0.6503,  0.7599]],\n",
+      "\n",
+      "        [[ 0.7645, -0.6448],\n",
+      "         [ 0.6448,  0.7645]],\n",
+      "\n",
+      "        [[ 0.7692, -0.6393],\n",
+      "         [ 0.6393,  0.7692]],\n",
+      "\n",
+      "        [[ 0.7739, -0.6336],\n",
+      "         [ 0.6336,  0.7739]],\n",
+      "\n",
+      "        [[ 0.7786, -0.6278],\n",
+      "         [ 0.6278,  0.7786]],\n",
+      "\n",
+      "        [[ 0.7833, -0.6218],\n",
+      "         [ 0.6218,  0.7833]],\n",
+      "\n",
+      "        [[ 0.7881, -0.6158],\n",
+      "         [ 0.6158,  0.7881]],\n",
+      "\n",
+      "        [[ 0.7929, -0.6096],\n",
+      "         [ 0.6096,  0.7929]],\n",
+      "\n",
+      "        [[ 0.7978, -0.6032],\n",
+      "         [ 0.6032,  0.7978]],\n",
+      "\n",
+      "        [[ 0.8026, -0.5968],\n",
+      "         [ 0.5968,  0.8026]],\n",
+      "\n",
+      "        [[ 0.8075, -0.5902],\n",
+      "         [ 0.5902,  0.8075]],\n",
+      "\n",
+      "        [[ 0.8124, -0.5834],\n",
+      "         [ 0.5834,  0.8124]],\n",
+      "\n",
+      "        [[ 0.8173, -0.5765],\n",
+      "         [ 0.5765,  0.8173]],\n",
+      "\n",
+      "        [[ 0.8223, -0.5694],\n",
+      "         [ 0.5694,  0.8223]],\n",
+      "\n",
+      "        [[ 0.8272, -0.5622],\n",
+      "         [ 0.5622,  0.8272]],\n",
+      "\n",
+      "        [[ 0.8322, -0.5548],\n",
+      "         [ 0.5548,  0.8322]],\n",
+      "\n",
+      "        [[ 0.8372, -0.5472],\n",
+      "         [ 0.5472,  0.8372]],\n",
+      "\n",
+      "        [[ 0.8422, -0.5395],\n",
+      "         [ 0.5395,  0.8422]],\n",
+      "\n",
+      "        [[ 0.8472, -0.5316],\n",
+      "         [ 0.5316,  0.8472]],\n",
+      "\n",
+      "        [[ 0.8523, -0.5235],\n",
+      "         [ 0.5235,  0.8523]],\n",
+      "\n",
+      "        [[ 0.8573, -0.5152],\n",
+      "         [ 0.5152,  0.8573]],\n",
+      "\n",
+      "        [[ 0.8623, -0.5067],\n",
+      "         [ 0.5067,  0.8623]],\n",
+      "\n",
+      "        [[ 0.8674, -0.4980],\n",
+      "         [ 0.4980,  0.8674]],\n",
+      "\n",
+      "        [[ 0.8724, -0.4891],\n",
+      "         [ 0.4891,  0.8724]],\n",
+      "\n",
+      "        [[ 0.8774, -0.4800],\n",
+      "         [ 0.4800,  0.8774]],\n",
+      "\n",
+      "        [[ 0.8825, -0.4707],\n",
+      "         [ 0.4707,  0.8825]],\n",
+      "\n",
+      "        [[ 0.8875, -0.4611],\n",
+      "         [ 0.4611,  0.8875]],\n",
+      "\n",
+      "        [[ 0.8925, -0.4513],\n",
+      "         [ 0.4513,  0.8925]],\n",
+      "\n",
+      "        [[ 0.8975, -0.4413],\n",
+      "         [ 0.4413,  0.8975]],\n",
+      "\n",
+      "        [[ 0.9025, -0.4311],\n",
+      "         [ 0.4311,  0.9025]],\n",
+      "\n",
+      "        [[ 0.9074, -0.4206],\n",
+      "         [ 0.4206,  0.9074]],\n",
+      "\n",
+      "        [[ 0.9123, -0.4098],\n",
+      "         [ 0.4098,  0.9123]],\n",
+      "\n",
+      "        [[ 0.9171, -0.3988],\n",
+      "         [ 0.3988,  0.9171]],\n",
+      "\n",
+      "        [[ 0.9219, -0.3875],\n",
+      "         [ 0.3875,  0.9219]],\n",
+      "\n",
+      "        [[ 0.9267, -0.3760],\n",
+      "         [ 0.3760,  0.9267]],\n",
+      "\n",
+      "        [[ 0.9314, -0.3641],\n",
+      "         [ 0.3641,  0.9314]],\n",
+      "\n",
+      "        [[ 0.9360, -0.3520],\n",
+      "         [ 0.3520,  0.9360]],\n",
+      "\n",
+      "        [[ 0.9406, -0.3396],\n",
+      "         [ 0.3396,  0.9406]],\n",
+      "\n",
+      "        [[ 0.9451, -0.3269],\n",
+      "         [ 0.3269,  0.9451]],\n",
+      "\n",
+      "        [[ 0.9495, -0.3139],\n",
+      "         [ 0.3139,  0.9495]],\n",
+      "\n",
+      "        [[ 0.9538, -0.3005],\n",
+      "         [ 0.3005,  0.9538]],\n",
+      "\n",
+      "        [[ 0.9580, -0.2869],\n",
+      "         [ 0.2869,  0.9580]],\n",
+      "\n",
+      "        [[ 0.9620, -0.2729],\n",
+      "         [ 0.2729,  0.9620]],\n",
+      "\n",
+      "        [[ 0.9660, -0.2586],\n",
+      "         [ 0.2586,  0.9660]],\n",
+      "\n",
+      "        [[ 0.9698, -0.2440],\n",
+      "         [ 0.2440,  0.9698]],\n",
+      "\n",
+      "        [[ 0.9734, -0.2290],\n",
+      "         [ 0.2290,  0.9734]],\n",
+      "\n",
+      "        [[ 0.9769, -0.2137],\n",
+      "         [ 0.2137,  0.9769]],\n",
+      "\n",
+      "        [[ 0.9802, -0.1980],\n",
+      "         [ 0.1980,  0.9802]],\n",
+      "\n",
+      "        [[ 0.9833, -0.1819],\n",
+      "         [ 0.1819,  0.9833]],\n",
+      "\n",
+      "        [[ 0.9862, -0.1655],\n",
+      "         [ 0.1655,  0.9862]],\n",
+      "\n",
+      "        [[ 0.9889, -0.1487],\n",
+      "         [ 0.1487,  0.9889]],\n",
+      "\n",
+      "        [[ 0.9913, -0.1315],\n",
+      "         [ 0.1315,  0.9913]],\n",
+      "\n",
+      "        [[ 0.9935, -0.1139],\n",
+      "         [ 0.1139,  0.9935]],\n",
+      "\n",
+      "        [[ 0.9954, -0.0959],\n",
+      "         [ 0.0959,  0.9954]],\n",
+      "\n",
+      "        [[ 0.9970, -0.0776],\n",
+      "         [ 0.0776,  0.9970]],\n",
+      "\n",
+      "        [[ 0.9983, -0.0588],\n",
+      "         [ 0.0588,  0.9983]],\n",
+      "\n",
+      "        [[ 0.9992, -0.0396],\n",
+      "         [ 0.0396,  0.9992]],\n",
+      "\n",
+      "        [[ 0.9998, -0.0200],\n",
+      "         [ 0.0200,  0.9998]],\n",
+      "\n",
+      "        [[ 1.0000,  0.0000],\n",
+      "         [ 0.0000,  1.0000]]])\n",
+      "\n",
+      "Control Problem Values (v Values):\n",
+      "tensor([2.9995])\n"
+     ]
+    }
+   ],
+   "source": [
+    "H = [[0, 1], [-1, 0]]\n",
+    "M = [[1, 0], [0, 1]]\n",
+    "C = [[1, 0], [0, 1]]\n",
+    "D = [[1, 0], [0, 1]]\n",
+    "R = [[1, 0], [0, 1]]\n",
+    "T = 1\n",
+    "\n",
+    "# Initialize the LQR class instance\n",
+    "lqr = LQR(H=H, M=M, C=C, D=D, R=R, T=T)\n",
+    "\n",
+    "# Example time grid\n",
+    "time_grid = torch.linspace(0, T, steps=100)\n",
+    "\n",
+    "# Example state tensor\n",
+    "x = torch.tensor([[[1.0], [2.0]]])\n",
+    "\n",
+    "# Compute the Markov control function\n",
+    "markov_control = lqr.markov_control_function(time_grid, x)\n",
+    "\n",
+    "# Compute the S values\n",
+    "S_values = lqr.solve_ricatti_ode(time_grid)\n",
+    "\n",
+    "# Compute the control problem value (v value)\n",
+    "v_values = lqr.control_problem_value(time_grid, x)\n",
+    "\n",
+    "# Print the results\n",
+    "print(\"Markov Control Function:\")\n",
+    "print(markov_control)\n",
+    "\n",
+    "print(\"\\nS Values:\")\n",
+    "print(S_values)\n",
+    "\n",
+    "print(\"\\nControl Problem Values (v Values):\")\n",
+    "print(v_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_absolute_error(predicted_values, true_values):\n",
+    "    \"\"\"\n",
+    "    使用PyTorch计算预测值和真实值之间的绝对误差。\n",
+    "\n",
+    "    参数:\n",
+    "    predicted_values: 预测值，可以是一个数值、列表、Numpy数组或PyTorch张量。\n",
+    "    true_values: 真实值，形状与predicted_values相同。\n",
+    "    返回:\n",
+    "    绝对误差，与输入数据的形状相同。\n",
+    "    \"\"\"\n",
+    "    # 确保输入为PyTorch张量\n",
+    "    if not isinstance(predicted_values, torch.Tensor):\n",
+    "        predicted_values = torch.tensor(predicted_values)\n",
+    "    if not isinstance(true_values, torch.Tensor):\n",
+    "        true_values = torch.tensor(true_values)\n",
+    "    \n",
+    "    # 计算绝对误差\n",
+    "    absolute_error = torch.abs(predicted_values - true_values)\n",
+    "    \n",
+    "    return absolute_error\n",
+    "\n",
+    "def calculate_max_error(predicted_values, true_values):\n",
+    "    \"\"\"\n",
+    "    计算最大绝对误差。\n",
+    "    \"\"\"\n",
+    "    absolute_error = calculate_absolute_error(predicted_values, true_values)\n",
+    "    max_error = torch.max(absolute_error)\n",
+    "    return max_error\n",
+    "\n",
+    "def calculate_mean_error(predicted_values, true_values):\n",
+    "    \"\"\"\n",
+    "    计算平均绝对误差。\n",
+    "    \"\"\"\n",
+    "    absolute_error = calculate_absolute_error(predicted_values, true_values)\n",
+    "    mean_error = torch.mean(absolute_error)\n",
+    "    return mean_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_monte_carlo_simulation(H, M, C, D, R, sigma, x0, S_values, T, N, num_simulations):\n",
+    "    dt = T / N\n",
+    "    average_cost_per_time = []\n",
+    "\n",
+    "    for _ in range(num_simulations):\n",
+    "        # 进行模拟\n",
+    "        simulated_states = torch.zeros(N + 1, 1, 2)  # 初始化模拟的状态\n",
+    "        simulated_states[0] = torch.tensor(x0)  # 设置初始状态\n",
+    "\n",
+    "        for i in range(N):\n",
+    "            # 计算控制量\n",
+    "            control = -torch.inverse(D) @ M.T @ S_values[0] @ simulated_states[i].T\n",
+    "\n",
+    "            # 计算下一个状态\n",
+    "            noise = torch.randn(2)  # 生成高斯白噪声\n",
+    "            simulated_states[i + 1] = simulated_states[i] + (\n",
+    "                H @ simulated_states[i] + M @ control + noise @ sigma.T\n",
+    "            ) * dt\n",
+    "\n",
+    "        # 计算每个时间点的成本\n",
+    "        cost_per_time = torch.einsum('ntd,dt->nt', simulated_states, C) + torch.einsum('ntd,dt->nt', control.unsqueeze(0), D) + torch.einsum('ntd,dt->nt', simulated_states[-1], R)\n",
+    "        average_cost_per_time.append(cost_per_time)\n",
+    "\n",
+    "    # 计算每个时间点的平均成本\n",
+    "    average_cost_per_time_tensor = torch.stack(average_cost_per_time).mean(dim=0)\n",
+    "    return average_cost_per_time_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
