--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "            dSdt = -2 * H.T @ S + S @ M @ np.linalg.inv(D) @ M.T @ S - C\n",
     "            return dSdt.flatten()\n",
     "        \n",
-    "        sol = solve_ivp(ricatti_ode, [T, time_grid[0]], R.flatten(), t_eval=torch.flip(time_grid, dims=[0]), vectorized=True,rtol=1e-6, atol=1e-9)\n",
+    "        sol = solve_ivp(ricatti_ode, [T, time_grid[0]], R.flatten(), t_eval=time_grid, vectorized=True,rtol=1e-6, atol=1e-9)\n",
     "        S_values = sol.y.T.reshape(-1, 2, 2)\n",
     "        S_values_tensor = torch.tensor(S_values, dtype=torch.float32)\n",
     "        S_values_reversed = torch.flip(S_values_tensor, [0])\n",
@@ -1157,7 +1157,7 @@
     "C = [[1, 0], [0, 1]]\n",
     "D = [[1, 0], [0, 1]]\n",
     "R = [[1, 0], [0, 1]]\n",
-    "T = 10\n",
+    "T = 1\n",
     "\n",
     "# Initialize the LQR class instance\n",
     "sigma = torch.tensor([[0.1], [0.2]])\n",
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,14 +1239,38 @@
     "    return x_values\n",
     "\n",
     "def simulation_ntimes(lqr,x,T,N,n):\n",
+    "    time_grid = torch.linspace(0, T, steps=N+1)\n",
+    "    final_v = np.zeros(n)\n",
+    "    initial_v = lqr.control_problem_value(time_grid, simulation (lqr,x,T,N))[0]\n",
+    "    for i in range(n):\n",
+    "        final_v[i] = lqr.control_problem_value(time_grid, simulation (lqr,x,T,N))[-1]\n",
+    "    return initial_v,final_v\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.6078, 0.5969, 0.5842, 0.5547, 0.5850, 0.5624, 0.5758, 0.5872, 0.6024,\n",
+      "        0.6110, 0.6085, 0.6498, 0.6404, 0.6098, 0.6384, 0.6415, 0.6507, 0.6418,\n",
+      "        0.6928, 0.7080, 0.7281, 0.7213, 0.7316, 0.7487, 0.7711, 0.8232, 0.8710,\n",
+      "        0.8814, 0.8805, 0.8907, 0.8765, 0.9690, 0.9290, 0.9346, 0.9563, 0.9546,\n",
+      "        1.0208, 1.0402, 1.0790, 1.1019, 1.1282, 1.1347, 1.1140, 1.1386, 1.1905,\n",
+      "        1.2765, 1.2602, 1.3087, 1.4098, 1.4143, 1.3950, 1.4270, 1.4602, 1.5183,\n",
+      "        1.5464, 1.5755, 1.5937, 1.6022, 1.6543, 1.6666, 1.7175, 1.6820, 1.9215,\n",
+      "        1.9945, 1.9202, 2.0309, 2.1223, 2.2340, 2.2389, 2.2203, 2.2598, 2.2852,\n",
+      "        2.2869, 2.2864, 2.2873, 2.3166, 2.2909, 2.3599, 2.6077, 2.6049, 2.7966,\n",
+      "        2.6197, 2.4963, 2.4013, 2.3325, 2.2910, 2.2679, 2.2296, 2.2000, 2.1948,\n",
+      "        2.1319, 1.9477, 1.8373, 1.8459, 1.6471, 1.4233, 1.6141, 1.5466, 1.3131,\n",
+      "        1.0997, 0.9425])\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -1255,24 +1279,6 @@
       "  a_values = [-torch.inverse(self.D) @ self.M.T @ torch.tensor(S_values[i], dtype=torch.float32) @ x_[None, :].T for i, x_ in enumerate(x)]\n",
       "/tmp/ipykernel_2141/2833493251.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  sigma_mat = torch.tensor(self.sigma, dtype=torch.float32)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0.6078, 0.6030, 0.6077, 0.6177, 0.5851, 0.5939, 0.6227, 0.6409, 0.6571,\n",
-      "        0.6809, 0.6799, 0.7159, 0.7822, 0.8627, 0.8678, 0.9848, 0.9875, 1.0172,\n",
-      "        1.0386, 1.0788, 1.0795, 1.1372, 1.1466, 1.1765, 1.1968, 1.2187, 1.2932,\n",
-      "        1.3927, 1.5100, 1.5151, 1.4835, 1.4346, 1.3444, 1.4075, 1.4431, 1.4883,\n",
-      "        1.4921, 1.4993, 1.5341, 1.5744, 1.6016, 1.6105, 1.6162, 1.6138, 1.6318,\n",
-      "        1.7447, 1.6903, 1.7064, 1.6834, 1.6686, 1.6965, 1.7059, 1.7751, 1.8329,\n",
-      "        1.8678, 1.8977, 1.9424, 2.0419, 2.0298, 2.2571, 2.4025, 2.4620, 2.4178,\n",
-      "        2.4361, 2.5479, 2.7032, 2.6832, 2.7556, 2.7544, 2.7880, 2.8172, 2.8136,\n",
-      "        2.8949, 2.8257, 2.7669, 2.7088, 2.8247, 2.8870, 2.8873, 2.9342, 2.9534,\n",
-      "        3.1589, 3.1528, 3.0919, 3.1590, 3.1663, 3.1262, 3.0940, 3.0594, 3.0560,\n",
-      "        3.0362, 2.8792, 2.6875, 2.5809, 2.6537, 2.5145, 2.2731, 1.9296, 1.8121,\n",
-      "        1.5451, 1.3001])\n"
      ]
     }
    ],
@@ -1291,18 +1297,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2141/2833493251.py:38: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  sigma_mat = torch.tensor(self.sigma, dtype=torch.float32)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1298177636936306 tensor(0.6078)\n"
+     ]
+    }
+   ],
+   "source": [
+    "initial_v,final_v= simulation_ntimes(lqr,initial_x,T,N=100,n=2000)\n",
+    "print(np.mean(final_v),initial_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.6109, 0.6048, 0.6057,  ..., 0.0099, 0.0079, 0.0076])\n"
+      "1.10738555341959 tensor(0.6078)\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(np.mean(final_v),initial_v)"
+   ]
   },
   {
    "cell_type": "markdown",
