--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -12,13 +12,10 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "from scipy.integrate import solve_ivp\n",
-    "import torch\n",
     "import torch.nn as nn\n",
     "import numpy as np\n",
-    "import os\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
-    "os.environ[\"KMP_DUPLICATE_LIB_OK\"]=\"TRUE\""
+    "from torch.utils.data import DataLoader, TensorDataset"
    ]
   },
   {
